<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"
            android:textColorHint="#ADD8E6"/>
        <item
            android:id="@+id/nav_find_document"
            android:icon="@drawable/ic_menu_find_document"
            android:title="@string/menu_find_document"
            android:textColorHint="#ADD8E6"/>
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_bookmark"
            android:title="@string/menu_bookmark"
            android:textColorHint="#ADD8E6"/>
    </group>

    <item
    android:id="@+id/nav_footer"
    android:title="@string/menu_footer"
    android:enabled="false"
    android:actionLayout="@layout/custom_menu_item" >
        <menu>
            <item
                android:id="@+id/footer_content"
                android:title=""
                android:actionLayout="@layout/custom_menu_item" />
        </menu>
    </item>

</menu>